# HelixForge

./: .dockerignore  .env.example  .gitignore  AUDIT_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  EVALUATION_REPORT.md  LICENSE  Makefile  README.md  REFOCUS_PLAN.md  SPEC.md  Step-by-step.md  claude.md  cli.py  config.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
agents/: base_agent.py  data_ingestor_agent.py  fusion_agent.py  insight_agent.py  insight_generator_agent.py  metadata_interpreter_agent.py  ontology_alignment_agent.py  provenance_tracker_agent.py
api/: server.py
api/routes/: __init__.py  alignment.py  datasets.py  fusion.py  insights.py  provenance.py
config/: development.yaml  production.yaml  staging.yaml
docs/: ARCHITECTURE.md  FAQ.md  SECURITY.md  STYLE_GUIDE.md  USER_STORIES.md
models/: schemas.py
scripts/: deploy.sh  setup.sh
tests/: conftest.py  golden_labels.json  test_acceptance.py  test_alignment.py  test_alignment_benchmark.py  test_backlog.py  test_fusion.py  test_golden_labels.py  test_ingestor.py  test_insights.py  test_integration.py  test_interpreter.py  test_production.py  test_provenance.py  test_utils.py
tests/benchmarks/: manifest.json
tests/fixtures/: employees.csv  flat_records.json  header_only.csv  latin1_names.csv  mixed_types.csv  nested_objects.json  pipe_data.csv  (+7 more)
utils/: config.py  embeddings.py  errors.py  llm.py  logging.py  metrics.py  similarity.py  validation.py
(+5 files in other folders)
